<resources>
    <string name="app_name">PADC-MyanmarAttractions</string>
    <string name="action_settings">Settings</string>

    <string name="home_screen_title">Myanmar\'s Attractions</string>

    <string name="attraction_list_detail_transition_name">attraction_list_detail_transition_name</string>
    <string name="action_share">Share</string>
    <string name="myn_attr_title">Myanmar\'s Attraction</string>


    <!-- login from -->
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <!-- Register from -->
    <string-array name="country_arrays">
        <item>Myanmar</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="lbl_email">Email</string>
    <string name="lbl_Reg">Register</string>
    <string name="rad_female">Female</string>
    <string name="rad_male">Male</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user">UserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
