<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium">
        <EditText
            android:id="@+id/etRegusername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_username"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium">
        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:inputType="textPassword"
            android:hint="@string/lbl_password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium">
        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:hint="@string/lbl_email"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Date of Birth"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <Spinner
        android:id="@+id/spiner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:entries="@array/country_arrays"/>

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Reg"/>
</LinearLayout>